# model/getNextQuestionResponse.go
@@ -1,0 +1,8 @@
+package model
+
+type GetNextQuestionResponse struct {
+	TestFinished   bool   `json:"testFinished"`
+	Question       string `json:"question"`
+	TotalQuestions int    `json:"totalQuestions"`
+	QuestionNumber int    `json:"questionNumber"`
+}
